public/assets/css/style.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

html, body {
    height: 100%;
    width: 100%
}

h1, h2, h3, h4 {
    margin: 0;
}

a {
    color: inherit;
    text-decoration: none;
}

.container {
    width: 100vw;
    margin: 0;
}

.logo-icon {
    width: 60px;
    margin-top: 4px;
    margin-left: 15px;
    margin-right: 5px;
}

.btn {
    background-color: #ee6c72;
}

.jumbotron {
    background-image: url('../images/computingdivision.jpg');
    background-position: center top;
    background-size: cover;
    background-repeat: no-repeat;
    color: #ffffff;
    width: 100vw;
    min-height: 90vh;
    margin: 0;
    vertical-align: middle;
    text-align: center;
    position: absolute;
}

.jumbotron-content {
    position: relative;
    top: 330px;
    margin-right: 4%;
    margin-left: 4%;
    padding: 30px;
    background-color: rgba(238,109,114,0.7);
    text-shadow: 2px 3px 8px black;
}

.jumbotron-content-subtitle {
    font-size: 30px;
}

.page-title {
    text-align: left;
    font-size: 50px;
    width: 85%;
    margin-right: 7%;
    margin-left: 8%;
    margin-bottom: 50px;
    padding-bottom: 15px;
    border-bottom: 5px solid rgb(238,109,114);
}

.articles-section {
    padding-top: 100vh;
}

.articles-flex {
    display: block;
    width: 100%;
    margin: 0 8%;
}

.grid-item {
    width: 380px;
    margin-bottom: 40px;
    position: relative;
}

.card {
    background-color: #f7f7f7;
}

.card .card-content .card-title {
    margin-bottom: 20px;
}

.card .card-reveal .card-title {
    margin-bottom: 20px;
}

.card .card-content {
    margin-bottom: 20px;
}

.card .card-content .card-content-p {
    margin-bottom: 10px;
}

.chat-icon {
    position: absolute;
    bottom: 15px;
    right: 15px;
}

.note-box {
    width: 100%;
    margin-bottom: 8px;
    position: relative;
    border-bottom: 1px solid #b0b0b0;
}

.trash-delete {
    position: absolute;
    top: -4px;
    right: -12px;
}

.fullscreen {
    position: absolute;
    right: 50px;
}

.modal-section {
    position: fixed;
    width: 80%;
    height: 85%;
    margin: 10%;
    margin-top: 5%;
    padding: 50px;
    top: 0;
    left: 0;
    display: none;
    background-color: rgba(238,109,114,1);
    overflow: scroll;
    color: black;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
}

.close-modal {
    position: absolute;
    top: 20px;
    right: 20px;
}

.modal-title {
    font-size: 30px;
}

.modal-byline,
.modal-date,
.modal-excerpt {
    font-size: 20px;
}

.modal-note-header {
    font-size: 25px;
    padding-left: 10px;
    padding-top: 10px;
    border-left: 1px solid black;
    border-top: 1px solid black;
}

.modal-note-icon {
    flex: 1;
    flex-shrink: 1;
}

.modal-note {
    flex: 6;
    flex-grow: 9;
    margin-left: 15px;
    max-width: 60vw;
}

.modal-flex {
    /*flex: 1;*/
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: flex-start;
    align-content: flex-start;
}

